Errors messages updated

--- a/i18n/i18n.json
+++ b/i18n/i18n.json
@@ -14,6 +14,7 @@
             "EMAIL_REQUIRED": "Email required",
             "EMAIL_NOT_VALID": "Email is not valid",
             "PASSWORD_REQUIRED": "Password required",
+            "USER_ALREADY_EXISTS": "User already exists",
             "FOR_SALE_MUST_BE_BOOLEAN": "'for_sale' must be a 'true' or 'false'",
             "PRICE_RANGE_NOT_VALID": "'price' is not a valid range",
             "PAGE_MUST_BE_NUMERIC": "'page' must be a numeric",
@@ -35,6 +36,7 @@
             "EMAIL_REQUIRED": "El email es obligatorio",
             "EMAIL_NOT_VALID": "El email no es válido",
             "PASSWORD_REQUIRED": "El password es obligatorio",
+            "USER_ALREADY_EXISTS": "El usuario ya existe",
             "FOR_SALE_MUST_BE_BOOLEAN": "'for_sale' debe ser ser 'true' or 'false'",
             "PRICE_RANGE_NOT_VALID": "'price' no contiene un rango válido",
             "PAGE_MUST_BE_NUMERIC": "'page' debe ser un múmero",
